wp-content/themes/fxprotools-theme/assets/sass/module-styles/_custom.scss
/* ... */
#add_payment_method {
	#payment {
		div.payment_box{
			display: block!important;
		}

		.wc-authorize-net-cim-credit-card-new-payment-method-form{
			> p:not(.validate-required){
				display: none!important;
			}
		}
	}
}
.noty_theme__relax.noty_bar{
	border-radius: 59px;
	.noty_body{
		padding: 3px;
	}
	.customer-notif{
		position: relative;
		padding-left: 68px;
		font-size: 14px;
		img{
			width: 59px;
			height: 59px;
			display: block;
			border-radius: 50%;
			position: absolute;
			top: 0;
			left: 0;
		}
		.customer-name{
			font-weight: bold;
			font-size: 15px;
		}
		.customer-time{
			color: #999;
			font-size: 13px;
		}
	}
}
.checkout-popup{
	#hide-checkout-popup{
		font-size: 40px;
		font-weight: bold;
		background: #000;
		width: 45px;
		height: 45px;
		line-height: 45px;
		text-align: center;
		border-radius: 50%;
		position: relative;
		display: block;
		z-index: 10;
		opacity: 1;
		color: #fff;
		position: absolute;
		top: -20px;
		right: -20px;
		&:before{
			content: "";
			display: block;
			position: absolute;
			top: 50%;
			left: 50%;
			background: rgba(0,0,0,.4);
			border-radius: 50%;
			width: 50px;
			height: 50px;
			margin-top: -25px;
			margin-left: -25px;
		}
	}
	.modal-dialog{
		max-width: 750px;
		width: auto;
	}
	.modal-content{
		border-radius: 0;
	}
	.modal-body{
		padding: 20px 50px;
		border-radius: 0;
		border: 4px solid rgba(0, 0, 0, 0.6);
		img{
			max-width: 100%;
		}
		h2{
			color: $red;
			font-size: 65px;
			margin: 0;
		}
		h3{
			font-size: 34px;
			margin: 0;
		}
		.intro-note{
			font-size: 31px;
			color: #fff;
			background: $green;
			margin-top: 10px;
		}
		p{
			margin-bottom: 25px;
			a{
				text-decoration: underline;
				color: #000;
			}
		}
		.btn-success{
			display: block;
			font-size: 30px;
    		padding: 17px 25px 17px 25px;
    		span {
    			font-size: 17px;
    		}
		}
	}
	@media (max-width: 991px){
		.modal-dialog{
			max-width: 700px;
		}
	}
	@media (max-width: 767px){
		.modal-body{
			padding: 20px 15px;
			h2{
				font-size: 42px;
			}
			h3{
				font-size: 25px;
			}
			.intro-note{
				font-size: 23px;
			}
			.btn-success{
				white-space: normal;
				font-size: 18px;
				padding: 10px 15px;
				span{
					font-size: 14px;
				}
			}
		}
	}
}

// Funnel - Marketing Links
.panel-default>.panel-heading+.panel-collapse>.panel-body {
    border: 1px solid $lightgrey;
	background: $white;
}

.accordion-group.panel-default {
    margin-bottom: 15px;
}
/* ... */

